fix grammar index.html

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
     <header>
         <h1>Colors & Font Techniques</h1>
-        <p>Below are two table the first showcasing different ways to use colors and the second showcasing different fonts</p>
+        <p>Below are two tables; the first showcasing different ways to use colors and the second showcasing different fonts.</p>
     </header>
 
     <main>
